# napari-manual-registration

./: .gitignore  CITATION.cff  LICENSE  README.md  poc_manual_registration.py  setup.cfg  tox.ini
src/napari_manual_registration/: __init__.py  _widget.py  napari.yaml
src/napari_manualregistration/: __init__.py  napari.yaml  poc_manual_registration.py
src/napari_manualregistration/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
