[metadata]
name = napari-manual-registration
version = attr: napari_manual_registration.__version__
description = A simple plugin to register 2 views of the same object
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jules-vanaret/napari-manual-registration
author = Alice Gros, Jules Vanaret
author_email = jules.vanaret@univ-amu.fr
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/jules-vanaret/napari-manual-registration/issues
    Documentation = https://github.com/jules-vanaret/napari-manual-registration#README.md
    Source Code = https://github.com/jules-vanaret/napari-manual-registration
    User Support = https://github.com/jules-vanaret/napari-manual-registration/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
    magicgui
    qtpy
    pyclesperanto_prototype

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-manual-registration = napari_manual_registration:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
